# polyp-segmentation-pipeline

./: .gitignore  README.md  pyproject.toml
model-service/: Dockerfile  main.py  requirements.txt  test.ipynb
model-service/FCBFormer/: eval.py  predict.py  train.py  viz_TB.py
model-service/FCBFormer/Data/: dataloaders.py  dataset.py
model-service/FCBFormer/Models/: models.py
