[tool.poetry]
name = "final-m1"
version = "0.1.0"
description = "Manage all services"
authors = ["Lê Kiệt <lekietvn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.31.1"

[tool.poetry.group.model_service.dependencies]
numpy = "1.22.3"
opencv-python = "4.5.5.64"
scikit-image = "0.19.2"
scikit-learn = "1.0.2"
timm = "0.5.4"
torch = ">=1.9.0,<=1.11.0"
torchvision = ">=0.10.0,<=0.12.0"
fastapi = "^0.115.0"
loguru = "^0.7.2"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
